--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "csv-parser": "^3.0.0",
     "express": "^4.16.4",
-    "pg": "^7.10.0"
+    "pg": "^7.10.0",
+    "sqlite3": "^5.1.2"
   },
   "engines": {
-	"node": "^12"
+    "node": "^12"
   }
 }
